<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/managed_virtual_display_description"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/rotates_with_content_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotates_with_content"
        android:layout_marginTop="16dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/skip_screen_capture_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_screen_capture_permission"
        android:layout_marginTop="8dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/auto_managed_virtual_display_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_managed_virtual_display_next_time"
        android:layout_marginTop="8dp" />

</LinearLayout>
